[tool.poetry]
name = "tacotron-exporter"
version = "1.0.0"
description = "Exports Skyrim for Tacotron2 processing."
authors = ["Laura F. Dickinson <laura@ektapane.net>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2021.4.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
